Checkbox Control: Fix squished checkboxes when label text wraps (https://github.com/woocommerce/woocommerce-blocks/pull/5192) (https://github.com/woocommerce/woocommerce-blocks/pull/5206)
On the front-end, checkboxes with labels would look squished when the labels wrapped
on a second line. That was due to the flex container taking too much space for the label
as the checkbox minimum dimensions was set in `px` rather than `em`, making it work
differently depending on the relative font size.

--- a/plugins/woocommerce-blocks/packages/checkout/components/checkbox-control/style.scss
+++ b/plugins/woocommerce-blocks/packages/checkout/components/checkbox-control/style.scss
@@ -17,9 +17,9 @@
 		height: em(24px);
 		width: em(24px);
 		margin: 0;
-		margin-right: $gap;
-		min-height: 24px;
-		min-width: 24px;
+    margin-right: $gap;
+		min-height: em(24px);
+		min-width: em(24px);
 		overflow: hidden;
 		position: static;
 		vertical-align: middle;
